# LMMS-AI-Fork

./: .gitignore  .gitmodules  CMakeLists.txt  Project_Overview.md  README.md  configure_lmms_project.bat  mkdocs.yml  setup_qt_env.bat  setup_qt_env_fixed.bat  test_cmake_config.bat
.context/: ai_features_technical_research.md  implementation_feasibility.md  implementation_roadmap.md  integration_plan.md  integration_plan_part10_conclusion.md  integration_plan_part1_overview.md  integration_plan_part2_directory.md  integration_plan_part3_build.md  integration_plan_part4_documentation.md  integration_plan_part7_ai_features.md  milestones.md  model_recommendations_gain_staging.md  model_recommendations_pattern_groove.md  model_selection_criteria.md  next_session_message.md  pattern_generation_poc_part1.md  project_context.md  roadmap.md  technical_challenges_solutions.md
.context/project_details/: component_relationships.md  development_setup.md  implementation_progress.md  integration_architecture.md  integration_plan.md  integration_plan_complete.md  integration_plan_part5_ci.md  integration_plan_part6_config.md  integration_plan_part7_implementation.md  integration_plan_part8_testing.md  integration_plan_part9_deployment.md  model_performance_benchmarks.md  model_recommendations_emotion.md  model_recommendations_melody_style.md  pattern_generation_poc_part2.md  qt_mingw_setup.md  technical_architecture.md  testing_evaluation_framework.md  user_experience_design.md
.github/: README.md
.github/workflows/: main.yml
ai/: CMakeLists.txt  README.md
ai/model_serving/: CMakeLists.txt
ai/model_serving/include/: GrooVAEModel.h  ModelServer.h  MusicVAEModel.h  TensorFlowLiteModel.h
ai/model_serving/src/: GrooVAEModel.cpp  ModelServer.cpp  MusicVAEModel.cpp  TensorFlowLiteModel.cpp
ai/plugins/: CMakeLists.txt
ai/plugins/include/: AIEffect.h  AIInstrument.h  AIPlugin.h  GrooVAEEffect.h  MusicVAEInstrument.h
ai/plugins/src/: AIEffect.cpp  AIInstrument.cpp  AIPlugin.cpp  GrooVAEEffect.cpp  MusicVAEInstrument.cpp
ai/ui/: CMakeLists.txt
ai/utils/: CMakeLists.txt
ai/utils/include/: MidiUtils.h
ai/utils/src/: MidiUtils.cpp
core/: CMakeLists.txt  README.md
docs/: README.md  index.md
implementation/: CMakeLists.txt  README.md  setup_dev_environment.md
implementation/model_serving/: CMakeLists.txt  ModelServer.cpp  ModelServer.h  MusicVAEModel.cpp  MusicVAEModel.h  TensorFlowLiteModel.h
implementation/plugins/: AIEffect.cpp  AIEffect.h  AIInstrument.cpp  AIInstrument.h  AIPlugin.cpp  AIPlugin.h  CMakeLists.txt  MusicVAEInstrument.cpp  MusicVAEInstrument.h
implementation/ui_components/: CMakeLists.txt
implementation/utils/: CMakeLists.txt  MidiUtils.cpp  MidiUtils.h
include/: README.md
models/: README.md
qt_test/: CMakeLists.txt  main.cpp
scripts/: README.md  download_qt.ps1  setup_directory_structure.ps1  setup_integrated_environment.bat
scripts/setup/: setup_dev_environment.ps1
tests/: CMakeLists.txt  README.md
tests/integration/: CMakeLists.txt  GrooVAEIntegrationTest.cpp  MusicVAEIntegrationTest.cpp
tests/performance/: CMakeLists.txt  ModelLoadingBenchmark.cpp
tests/unit/: AIPluginTest.cpp  CMakeLists.txt  GrooVAEModelTest.cpp  MidiUtilsTest.cpp  ModelServerTest.cpp  MusicVAEModelTest.cpp  TensorFlowLiteModelTest.cpp
